Mostly done with methods

--- a/Main.tex
+++ b/Main.tex
@@ -79,7 +79,9 @@
 \setcounter{page}{1}
 \pagenumbering{Roman}			% Capitalized roman numbering starting from I (one)
 
-\input{include/backmatter/Appendix_1}
+\input{include/backmatter/Code}
+
+\input{include/backmatter/TestingProtocol}
 
 \input{include/backmatter/Lastpage}
 
