--- a/include/settings/Settings.tex
+++ b/include/settings/Settings.tex
@@ -16,6 +16,9 @@
 \numberwithin{figure}{chapter}						% Numbering order for figures
 \numberwithin{table}{chapter}						% Numbering order for tables
 \usepackage{listings}								% Enables source code listings
+\usepackage{xcolor} %red, green, blue, yellow, cyan, magenta, black, white
+\definecolor{mygreen}{RGB}{28,172,0} % color values Red, Green, Blue
+\definecolor{mylilas}{RGB}{170,55,241} 
 \usepackage{chemfig}								% Chemical structures
 \usepackage[top=3cm, bottom=3cm,
 			inner=3cm, outer=3cm]{geometry}			% Page margin lengths			
@@ -29,6 +32,7 @@
 \usepackage{parskip}								% Enables vertical spaces correctly
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
+\usepackage{tabularx}
 
 % DEFINE THESIS TYPE
 \def\ThesisType{B} % M - master, B - bachelor
