--- a/references.bib
+++ b/references.bib
@@ -5,11 +5,27 @@
     url = {http://vedder.se/2014/01/a-custom-bldc-motor-controller/}
 }
 
+@misc{ArgoAI2021AutonomousCyclists,
+    title = {{Autonomous Vehicle Guidelines for Safe Driving Around Cyclists}},
+    year = {2021},
+    author = {{Argo AI}},
+    month = {12},
+    url = {https://www.argo.ai/wp-content/uploads/2021/12/ArgoAI_BikeGuidelines-WithCopyright.pdf}
+}
+
 @misc{NationalInstruments2022BenefitsLabVIEW,
     title = {{Benefits of Programming Graphically in LabVIEW}},
     year = {2022},
     author = {{National Instruments}},
     url = {https://www.ni.com/sv-se/innovations/white-papers/13/benefits-of-programming-graphically-in-ni-labview.html}
+}
+
+@misc{VanLiew2022C++Code,
+    title = {{C++ programming with Visual Studio Code}},
+    year = {2022},
+    author = {Van Liew, Greg and {eli} and Reid, Julia and Wang, Andrew and {Pine} and Bierner, Matt and Sola, Jordan and Bluemle, Frieder and Rashedi, Elaheh},
+    month = {5},
+    url = {https://code.visualstudio.com/docs/languages/cpp}
 }
 
 @misc{Nationalinstruments2018CallNode,
@@ -18,6 +34,20 @@
     author = {{National instruments}},
     month = {3},
     url = {https://zone.ni.com/reference/en-XX/help/371361R-01/glang/call_library_function/}
+}
+
+@misc{FileZilla2022ClientFeatures,
+    title = {{Client Features}},
+    year = {2022},
+    author = {{FileZilla}},
+    url = {https://filezilla-project.org/client_features.php}
+}
+
+@misc{Kitware2022CMake,
+    title = {{CMake}},
+    year = {2022},
+    author = {{Kitware}},
+    url = {https://cmake.org/}
 }
 
 @misc{Vedder2015CommunicatingUART,
@@ -34,6 +64,13 @@
     author = {{National Instruments}},
     month = {10},
     url = {https://knowledge.ni.com/KnowledgeArticleDetails?id=kA03q000000YGNdCAO&l=sv-SE}
+}
+
+@misc{Shimano2022DU-E6010,
+    title = {{DU-E6010}},
+    year = {2022},
+    author = {{Shimano}},
+    url = {https://bike.shimano.com/en-EU/product/component/citytrek-ebike-e6000/DU-E6010.html}
 }
 
 @misc{Maxon2021ESCONReference,
@@ -58,6 +95,14 @@
     author = {{National Instruments}},
     month = {2},
     url = {https://www.ni.com/sv-se/innovations/white-papers/14/from-student-to-engineer--preparing-future-innovators-with-the-n.html}
+}
+
+@misc{NationalInstruments2021GettingEdition,
+    title = {{Getting Started with C/C++ Development Tools for NI Linux Real-Time, Eclipse Edition}},
+    year = {2021},
+    author = {{National Instruments}},
+    month = {1},
+    url = {https://knowledge.ni.com/KnowledgeArticleDetails?id=kA03q000000YHR7CAO&l=sv-SE}
 }
 
 @misc{AvagoTechnologies2014HEDM-55xx/560xHEDS-55xx/56xx,
@@ -91,6 +136,21 @@
     url = {https://www.ni.com/sv-se/support/model.myrio-1900.html}
 }
 
+@misc{J2020NICode,
+    title = {{NI Linux Real-Time Cross Compiling: Using the NI Linux Real-Time Cross Compile Toolchain with Visual Studio Code}},
+    year = {2020},
+    author = {J, Charlie},
+    month = {3},
+    url = {https://forums.ni.com/t5/NI-Linux-Real-Time-Documents/NI-Linux-Real-Time-Cross-Compiling-Using-the-NI-Linux-Real-Time/ta-p/4026449}
+}
+
+@misc{Hasse2022NinjaSpeed,
+    title = {{Ninja, a small build system with a focus on speed}},
+    year = {2022},
+    author = {Hasse, Jan Nicklas and Weber, Nico and Martin, Evan and Costa, Gustavo and Ikuta, Takuto},
+    url = {https://ninja-build.org/}
+}
+
 @article{Digilent2017PmodManual,
     title = {{Pmod NAV Reference Manual}},
     year = {2017},
@@ -120,12 +180,38 @@
     issn = {10586393}
 }
 
+@misc{MathWorks2022TDMSSimulink,
+    title = {{TDMS Format Files - MATLAB {\&} Simulink}},
+    year = {2022},
+    author = {{MathWorks}},
+    url = {https://www.mathworks.com/help/daq/tdms-format-files.html}
+}
+
+@article{Beavers2017TheGyro,
+    title = {{The Case of the Misguided Gyro}},
+    year = {2017},
+    journal = {Analog Dialogue},
+    author = {Beavers, Ian},
+    number = {3},
+    month = {3},
+    volume = {51},
+    url = {https://www.analog.com/en/analog-dialogue/raqs/raq-issue-139.html}
+}
+
 @misc{NationalInstruments2020TheInnovation,
     title = {{The LabVIEW RIO Architecture: A Foundation for Innovation}},
     year = {2020},
     author = {{National Instruments}},
     month = {10},
     url = {https://www.ni.com/sv-se/innovations/white-papers/13/the-labview-rio-architecture--a-foundation-for-innovation.html}
+}
+
+@misc{NationalInstruments2022TheFormat,
+    title = {{The NI TDMS File Format}},
+    year = {2022},
+    author = {{National Instruments}},
+    month = {5},
+    url = {https://www.ni.com/sv-se/support/documentation/supplemental/06/the-ni-tdms-file-format.html}
 }
 
 @article{GraceLegaspi2020UART:Receiver/Transmitter,
@@ -136,6 +222,14 @@
     number = {4},
     volume = {54},
     url = {https://www.analog.com/en/analog-dialogue/articles/uart-a-hardware-communication-protocol.html}
+}
+
+@misc{Vedder2018Vedderb/bldc_uart_comm_stm32f4_discovery:UART,
+    title = {{vedderb/bldc{\_}uart{\_}comm{\_}stm32f4{\_}discovery: A project that demonstrates how to communicate between the VESC and a STM32F4 discovery board using UART}},
+    year = {2018},
+    author = {Vedder, Benjamin},
+    month = {12},
+    url = {https://github.com/vedderb/bldc_uart_comm_stm32f4_discovery}
 }
 
 @misc{Vedder2016VESCESC,
