Updates from Overleaf

--- a/include/Conclusion.tex
+++ b/include/Conclusion.tex
@@ -1,6 +1,6 @@
 % CREATED BY MAGNUS GUSTAVER, 2020
 \chapter{Conclusion}
 
-Text
+Hardware has to improve, things has to be mounted.
 
 \section{Future work}
