--- a/include/settings/Settings.tex
+++ b/include/settings/Settings.tex
@@ -11,7 +11,6 @@
 \usepackage{amsmath}								% Mathematical expressions (American mathematical society)
 \usepackage{amssymb}								% Mathematical symbols (American mathematical society)
 \usepackage{graphicx}								% Figures
-\usepackage{subfig}									% Enables subfigures
 \numberwithin{equation}{chapter}					% Numbering order for equations
 \numberwithin{figure}{chapter}						% Numbering order for figures
 \numberwithin{table}{chapter}						% Numbering order for tables
@@ -33,6 +32,10 @@
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
 \usepackage{tabularx}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage[all]{nowidow}                           % No single lines at start of page
+\usepackage{siunitx}
 
 % DEFINE THESIS TYPE
 \def\ThesisType{B} % M - master, B - bachelor
